Added support for various filters and ScrapingSteps for Selenium